--- a/sTyle.css
+++ b/sTyle.css
@@ -1,11 +1,12 @@
 body {
 	color: #6B0504;	
     background-color: #EAE6E5}
+     
      div{
          border:solid 8px purple;
          padding: 20px 30px 20px 30px;
-         margin: 35px
-     }
-     #money{
-         background-color: paleturquoise;
-     }
+         margin: 35px;}
+
+body{
+
+}
